<!--Pratheep Chandrakumar N01376948 Section A-->
<!--Dhruv Dave N01401657 Section A-->
<!-- Utsav Sharma N01392141 Section A -->
<!-- Sukhvir Singh Brar N01395820 Section A -->
<resources>
    <string name="app_name">OneHome</string>
    <string name="Base_String">Welcome to OneHome App!</string>
    <string name="exit_dialouge">Do you want to exit from the app?</string>
    <string name="exit_yes">Yes</string>
    <string name="exit_no">No</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="OpenButton">Open</string>
    <string name="CloseButton">Close</string>
    <string name="CurtainControl">Control opening and closing of Curtain by sliding.</string>
    <string name="ApplyButton">Apply</string>
    <string name="ApplySettingsButton">Apply Settings?</string>
    <string name="ChangeLanguageText">Change Language</string>
    <string name="DarkModeText">Dark Mode</string>
    <string name="ResetAppButton">Reset App</string>
    <string name="SettingsTitleText">Settings</string>
    <string name="LCDTitle">LCD Display Settings</string>
    <string name="LcdOption1">Turn LCD On</string>
    <string name="LcdOption3">Display Motion</string>
    <string name="LcdOption2">Display Temperature</string>
    <string name="LcdOption4">Display Curtain Status</string>
    <string name="LcdOption5">Display Custom Text</string>
    <string name="InputLcd">Enter Text to Display (Max 12 char)</string>
    <string name="EnterButtonText">Enter</string>
    <string name="temperature_label">Temperature</string>
    <string name="humidity_label">Humidity</string>
    <string name="readings_label">Readings</string>
    <string name="alert_label">Alert</string>
    <string name="temperature_humidity_menu">Temperature/Humidity</string>
    <string name="motion_menu">Motion</string>
    <string name="curtain_menu">Curtain</string>
    <string name="display_menu">Display</string>
    <string name="setting_menu">Setting</string>
    <string name="set_temperature_threshhold">Set Temperature Threshold</string>
    <string name="alert_me">Alert me</string>
    <string name="set_humidity_threshhold">Set Humidity Threshold</string>
    <string name="snackbar_granted_permissions">\Call Permission Granted </string>
    <string name="snackbar_denied_permissions">\Call Permission Denied </string>
    <string name="alertbar_permissions">\We need permissions to use the functionality of the app </string>
    <string name="alertbar_ok">Okay</string>
    <string name="alertbar_no">No</string>
    <string name="alertbar_confirm_exit">Confirm Your Exit!!</string>
    <string name="LockScreenOption">Lock Screen to Portrait</string>
    <string name="LockScreenButton">LockScreen</string>
    <string name="permissions2">Permission Required</string>
    <string name="permissions3">Permission is needed to call the help number</string>
    <string name="contact_us_menu2">Contact Us</string>
    <string name="feedback_menu2">Feedback</string>
    <string name="useful_tips_menu">Useful Tips</string>
    <string name="share_the_app_menu2">Share the App</string>
    <string name="feedback_menu">Send feedback</string>
    <string name="app_link">The app link is available when we publish app on the playstore.</string>
    <string name="curtain_header">Controls</string>
    <string name="imageofcurtain">Image of Curtain</string>
    <string name="ReviewSubmitButton">Submit</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="CommentString">enter a short comment (Max 30 char)</string>
    <string name="EmailString">Enter your email address</string>
    <string name="PhoneNum">Enter your Phone Number</string>
    <string name="NameString">Enter your Name</string>
    <string name="TODO">TODO</string>
    <string name="dark_enable">Dark mode enabled</string>
    <string name="dark_disable">Dark mode disabled</string>
    <string name="screeen_locked">Screen is Locked</string>
    <string name="screen_unlocked">Screen is Unlocked</string>
    <string name="app_reset">App Reset</string>
    <string name="field_empty">One or more fields are empty</string>
    <string name="field_success">Data Entered Sussessfully.</string>
    <string name="curtain_open">Curtain is opened</string>
    <string name="curtain_close">Curtain is closed</string>
    <string name="allow_call_perm">You have allowed the Call Permission</string>
    <string name="set_max_humidity">Set Maximum Humidity: </string>
    <string name="set_max_temperature">Set Maximum Temperature: </string>
    <string name="switch_max_temp">Maximum Temperature Setted</string>
    <string name="switch_max_humidity">Maximum Humidity Setted</string>
    <string name="unmute_button">Unmute</string>
    <string name="Mute_button">Mute</string>
    <string name="Ringer_mode">Volume Control</string>
    <string name="max_temp_notification">You have successfully set the maximum humidity limit.</string>
    <string name="max_humidity_notification">You have successfully set the maximum temperature limit.</string>
</resources>