<?xml version="1.0" encoding="utf-8"?>
<!--Pratheep Chandrakumar N01376948 Section A-->
<!--Dhruv Dave N01401657 Section A-->
<!-- Sukhvir Singh Brar N01395820 Section A -->
<!-- Utsav Sharma N01392141 Section A -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/lightblue"
    >


    <TextView
        android:layout_width="152dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="134dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="620dp"
        android:text="@string/curtain_header"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/OpenButton"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="257dp"
        android:layout_marginBottom="228dp"
        android:text="@string/OpenButton" />


    <Button
        android:id="@+id/CloseButton"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="228dp"
        android:text="@string/CloseButton" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="282dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="301dp"
        android:contentDescription="@string/imageofcurtain"
        app:srcCompat="@drawable/curtain" />

    <TextView
        android:id="@+id/CurtainOpeningSelection"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="149dp"
        android:text="@string/CurtainControl"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <SeekBar
        android:id="@+id/CurtainSeekbar"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="66dp"
        android:max="150"
        android:padding="10dp"
        android:paddingTop="10dp" />


</RelativeLayout>