<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/lightblue"
    tools:context=".ReviewUs">


    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="241dp"
        android:layout_height="72dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="86dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="84dp"
        android:numStars="5"
        android:stepSize="0.5"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="283dp"
        android:layout_height="59dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="312dp"
        android:hint="@string/NameString" />

    <EditText
        android:id="@+id/Phone"
        android:layout_width="294dp"
        android:layout_height="59dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="446dp"
        android:layout_marginEnd="59dp"
        android:ems="10"
        android:hint="@string/PhoneNum"
        android:inputType="phone" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="318dp"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="139dp"
        android:ems="10"
        android:hint="@string/EmailString"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="605dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/CommentString"
        android:maxLength="30" />

    <Button
        android:id="@+id/submit_review_button"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="13dp"
        android:text="@string/ReviewSubmitButton" />

</RelativeLayout>