<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_marginTop="50dp"

    >
    <LinearLayout
        android:paddingBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/readings_label"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/amber"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       android:layout_marginTop="70dp"
        >


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:paddingBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:background="@color/back_colour">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/temp_icon"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/temperature_label"
                    android:textSize="30sp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:layout_centerInParent="true"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:padding="10dp"
                android:background="@color/back_colour">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/humidity_icon"
                    android:layout_alignParentEnd="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/humidity_label"
                    android:textSize="30sp"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:layout_centerInParent="true"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:paddingBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/alert_label"
                android:textStyle="bold"
                android:textColor="@color/amber"
                android:textSize="30sp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/set_temperature_threshhold"
                android:textSize="20sp"
                android:textColor="@color/black"
                >

            </TextView>





        </LinearLayout>

        <Switch
            android:text="@string/alert_me"
            android:paddingTop="10dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="250dp"

            tools:ignore="UseSwitchCompatOrMaterialXml">

        </Switch>




        <SeekBar
            android:id="@+id/simpleSeekBar"
            android:paddingTop="10dp"
            android:padding="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="150"/><!-- set 150 maximum value for the progress -->



        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/set_humidity_threshhold"
                android:textSize="20sp"
                android:textColor="@color/black"
                >

            </TextView>





        </LinearLayout>

        <Switch
            android:text="@string/alert_me"
            android:paddingTop="10dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="250dp"

            tools:ignore="UseSwitchCompatOrMaterialXml">

        </Switch>




        <SeekBar
            android:id="@+id/simpleSeekBar2"
            android:paddingTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="150"/><!-- set 150 maximum value for the progress -->

    </LinearLayout>





</RelativeLayout>